--- a/file-cloud/src/main/resources/sample.fxml
+++ b/file-cloud/src/main/resources/sample.fxml
@@ -4,19 +4,19 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox alignment="center" spacing="5.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.2-internal" fx:controller="file.manager.Controller" stylesheets="style.css">
-    <MenuBar>
+<VBox alignment="center" spacing="5.0" stylesheets="style.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="file.manager.Controller">
+    <MenuBar onMouseClicked="#fileListClicked">
         <Menu text="File">
-                <MenuItem text="Exit" onAction="#menuItenFileAction"/>
+                <MenuItem onAction="#menuItenFileAction" text="Exit" />
         </Menu>
     </MenuBar>
-    <TextField fx:id="pathField" editable="false" />
-    <ListView VBox.vgrow="ALWAYS" fx:id="fileList"/>
+    <TextField fx:id="pathField" editable="false" focusTraversable="false"/>
+    <ListView fx:id="fileList" VBox.vgrow="ALWAYS" />
     <HBox>
             <Button maxWidth="Infinity" text="View" HBox.hgrow="ALWAYS" />
-            <Button maxWidth="Infinity" text="Copy" HBox.hgrow="ALWAYS" />
-            <Button maxWidth="Infinity" text="Remove" HBox.hgrow="ALWAYS" />
-            <Button maxWidth="Infinity" text="Delete" HBox.hgrow="ALWAYS" />
+            <Button maxWidth="Infinity" text="Copy" onAction="#copyAction" HBox.hgrow="ALWAYS" />
+            <Button maxWidth="Infinity" text="Move" onAction="#moveAction" HBox.hgrow="ALWAYS" />
+            <Button maxWidth="Infinity" text="Delete" onAction="#deleteAction" HBox.hgrow="ALWAYS" />
     </HBox>
    <padding>
       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
