--- a/ClientServer/client/src/main/resources/main.fxml
+++ b/ClientServer/client/src/main/resources/main.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.control.MenuItem?>
 
 <VBox alignment="center" xmlns="http://javafx.com/javafx/10.0.2-internal"
-      xmlns:fx="http://javafx.com/fxml/1" fx:controller="filemanager.Controller">
+      xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.Controller">
     <MenuBar>
         <Menu text="File">
             <MenuItem onAction="#Quit" text="Quit" />
