--- a/ClientServer/client/src/main/resources/panel.fxml
+++ b/ClientServer/client/src/main/resources/panel.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.ComboBox?>
 
 <VBox alignment="center" xmlns="http://javafx.com/javafx/10.0.2-internal"
-      xmlns:fx="http://javafx.com/fxml/1" fx:controller="filemanager.PanelController">
+      xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.PanelController">
     <HBox>
         <ComboBox fx:id="disksBox" onAction="#selectDiskAction"/>
         <TextField fx:id="pathField" HBox.hgrow="ALWAYS" editable="false"/>
